# mltoolbox

./: Dockerfile  Makefile  README.md  docker_run.sh  entrypoint.sh  pyproject.toml
.docker_configs/ipython/profile_default/: ipython_config.py
.docker_configs/ipython/profile_default/startup/: 02-extensions.py
.docker_configs/jupyter/: extensions_script.sh  jupyter_notebook_config.py
.docker_configs/root_home_dir/: .Rprofile
.docker_configs/root_home_dir/.ipython/profile_default/: ipython_kernel_config.py
.docker_configs/root_home_dir/.ipython/profile_default/startup/: 01-pandas_config.py  02-extensions.py
.docker_configs/root_home_dir/.jupyter/: jupyter_notebook_config.py
.docker_configs/root_home_dir/.jupyter/lab/user-settings/@jupyterlab/github/: drive.jupyterlab-settings
.docker_configs/root_home_dir/.jupyter/lab/user-settings/@jupyterlab/notebook-extension/: tracker.jupyterlab-settings
.docker_configs/root_home_dir/.jupyter/nbconfig/: notebook.json
.docker_configs/root_home_dir/.jupyter/notebook_templates/: papermill_template.ipynb
.docker_configs/setup_scripts/: jupyter_extensions_script.sh  jupyter_extensions_spark.sh  jupyter_kernels.sh  jupyter_tools.sh  jupyternb_extensions_script.sh
docs/: resources.txt
notebooks/: Untitled.ipynb
project/: main.py
