[tool.poetry]
name = "project_name"
version = "0.1.0"
description = "description"
readme = "README.md"
authors = ["dude"]
packages = [ { include = "project"}, ]


[tool.poetry.dependencies]
python = "^3.7"

# # Data Analysis
pandas = "*"
pandarallel = "*"

# # Math & Stats
numpy = "*"
scipy = "*"
statsmodels = "*"

# # Visualizations
matplotlib = "*"
seaborn = "*"
pydot = "*"
plotly = "*"

# # Python utils
joblib = "*"

# # Geo
h3 = "*"
folium = "*"
geopandas = "*"

# # ML
scikit-learn = "*"
xgboost = "*"
keras = "*"
tensorflow = "2.1.0"
tensorflow-estimator = "2.1.0"
#=py3.7_cpu_0 +cpu
#torch = "*=py3.7_cpu_0"
#torchvision = "*=py3.7_cpu"
# PyBrain
# $ git clone git://github.com/pybrain/pybrain.git
# $ python setup.py install

# # Model Explainability
lime = "*"
eli5 = "*"

# # Data scraping
beautifulsoup4 = "*"
scrapy = "*"

# # Computer Vision
opencv-python = "*"
opencv-contrib-python = "*"
scikit-image = "*"
Pillow = "*"

# # Audio
librosa = "*"
madmom = "*"

# # NLP
spacy = "*"
nltk = "*"

# # UIs & Dashboards
kivy = "*"
dash = "*"
bokeh = "*"

# # DBs
sqlalchemy = "*"


[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-cov = "^2.7"
black = "19.3b0"
pre-commit = "^1.18"
ipython = "*"
ipykernel = "*"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
